kubernetes/infrastructure/base/rustfs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustfs
  namespace: rustfs
spec:
  ports:
    - name: endpoint
      port: 9000
    - name: console
      port: 9001
