kubernetes/infrastructure/base/rustfs/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rustfs
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rustfs.theblacklodge.dev`)
      kind: Rule
      services:
        - name: console
          port: 9001
